--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "react-yandex-metrika": "^2.4.2",
         "reactstrap": "^7.1.0",
         "recharts": "1.5.0",
+        "react-particles-js":"3.2.1",
         "recompose": "^0.30.0",
         "redux": "^4.0.1",
         "redux-form": "^8.1.0",
